--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <p id="title"></p>
-    <p id="brand"></p>
-    <p id="model"></p>
-    <p id="specifications"></p>
-    <p id="price"></p>
+    <ul id="car-list"></ul>
+    <div class="car-details">
+      <p id="make"></p>
+      <p id="model"></p>
+      <p id="year"></p>
+      <p id="color"></p>
+      <p id="price"></p>
+      <p id="mileage"></p>
+      <p id="fuelType"></p>
+      <p id="transmission"></p>
+      <p id="bodyType"></p>
+      <p id="condition"></p>
+      <p id="location"></p>
+      <img id="image" />
+      <p id="description"></p>
+      ,
+      <button id="buyButton">Buy Now</button>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
