--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <ul id="car-list"></ul>
-    <div class="car-details">
-      <p id="make"></p>
-      <p id="model"></p>
-      <p id="year"></p>
-      <p id="color"></p>
-      <p id="price"></p>
-      <p id="mileage"></p>
-      <p id="fuelType"></p>
-      <p id="transmission"></p>
-      <p id="bodyType"></p>
-      <p id="condition"></p>
-      <p id="location"></p>
-      <img id="image" />
-      <p id="description"></p>
-      ,
-      <button id="buyButton">Buy Now</button>
+    <div class="container">
+      <div id="car-list"></div>
+
+      <div class="car-details">
+        <img id="image" />
+        <p id="make"></p>
+        <p id="model"></p>
+        <p id="year"></p>
+        <p id="color"></p>
+        <p id="price"></p>
+        <p id="mileage"></p>
+        <p id="fuelType"></p>
+        <p id="transmission"></p>
+        <p id="bodyType"></p>
+        <p id="condition"></p>
+        <p id="location"></p>
+        <p id="description"></p>
+        <button id="buyButton">Buy Now</button>
+      </div>
     </div>
 
     <script src="index.js"></script>
